# my-repo

client/: CMakeCache.txt  CMakeLists.txt  Client  Makefile  cmake_install.cmake
client/inc/: client.hpp
client/src/: client.cpp
server/: CMakeCache.txt  CMakeLists.txt  Makefile  Server  cmake_install.cmake
server/inc/: server.hpp
server/src/: server.cpp
